fixed missing packages

--- a/linear_classifier.ipynb
+++ b/linear_classifier.ipynb
@@ -64,6 +64,7 @@
     "import os\n",
     "import requests\n",
     "import tarfile\n",
+    "import sys\n",
     "\n",
     "dataset_url = \"http://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\"\n",
     "dataset_folder = \"cifar-10\"\n",
