--- a/linear_classifier.ipynb
+++ b/linear_classifier.ipynb
@@ -656,7 +656,9 @@
     "1. try to modify the regularization to be L1 :\n",
     "replace $\\sum_{i,j} W_{i,j} W{i,j}$ with $\\sum_{i,j} W_{i,j}$\n",
     "2. try to implement the SoftMax Classifier\n",
-    "so the $L_i= -log(P(Y=y_i|X=x_i)),~$"
+    "so the<br>\n",
+    "$L_i= -log(P(Y=y_i|X=x_i)),~P(Y=k|X=x_i)=\\frac{exp(s_k)}{\\sum_j exp(s_j)}$,<br>\n",
+    "where $y_i$ is the correct label for the $i$-th imagge."
    ]
   },
   {
