added get cheatsheet

--- a/linear_classifier.ipynb
+++ b/linear_classifier.ipynb
@@ -728,6 +728,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- Activate the conda environment:<br>\n",
+    "`$ conda activate MLlectures`\n",
+    "- navigate to the folder with the linear SVM:<br>\n",
+    "`$ cd linear_SVM`\n",
+    "- hide our local changes from `git`:<br>\n",
+    "`$ git stash`\n",
+    "- check at which branch are we:\n",
+    "`$ git branch`\n",
+    "-- should be `classroom`, if not then<br>\n",
+    "`$ git fetch`\n",
+    "-- list remote branches:<br>\n",
+    "`$ git branch -v -a`\n",
+    "switch to `classroom`:<br>\n",
+    "-- `$ git switch classroom`\n",
+    "\n",
+    "`$ git pull`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## k-nearest neighbours\n",
     "![](knn.png)\n",
     "[WIki:](https://en.wikipedia.org/wiki/K-nearest_neighbors_algorithm)\n",
@@ -887,6 +909,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets make a prediction for a random image and see what are the nearest neighbors"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 196,
    "metadata": {},
@@ -908,7 +937,9 @@
     }
    ],
    "source": [
+    "# Get index for a random image from the testing sample\n",
     "ind = np.random.randint(x['test'].shape[0])\n",
+    "\n",
     "model.show_kNeighbors(x['test'][ind:ind+1],y['test'][ind:ind+1],k=5)"
    ]
   },
